refactor: use `Map.of`